Closed Bug 81773 Opened 24 years ago Closed 24 years ago

[BiDi] XUL text flips to and fro

Categories

(Core :: Layout: Text and Fonts, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: mar_garina, Assigned: smontagu)

References

Details

(Keywords: intl)

Attachments

(1 file, 4 obsolete files)

A hebrew (and probably other rtl language) bookmark on the 'Personal toolbar folder' isn't flipped and look reversed. Though, when the mouse moves over this hebrew text, it flips and looks great. How to reproduce: (I hope non-hebrew speakers could reproduce this as well..) 1. visit a site with a hebrew title (such as http://www.msn.co.il). 2. add to bookmarks. 3. move the bookmark into the 'personal toolbar folder'. 4. Hey, it looks just as it should! 5. How to see the bug itself: a. close mozilla and restart it. now the hebrew text doesn't look good. b. move your mouse over the text in the toolbar - it makes it look bad / good (good - if it looked bad before , bad - if it looked good before. in other words , it flips it) What it should be like: 1. Mouseover a hebrew text on the 'personal toolbar folder' shouldn't make it looks reversed. 2. The text should be flipped in advance.. (*) Wherever I wrote hebrew, I mean to any rtl language, because I guess they contain the same problem. (**) wfm on windows.
Seeing this also on US (non-bidi) Windows. The bug will almost certainly apply on any platform without native bidi support. Assigning to myself
Assignee: rchen → simon
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Hardware: PC → All
Attached patch One line patch fixes the bug (obsolete) — Splinter Review
cc-ing ftang. Frank, can you get this reviewed before 0.9.1 freezes? It's a relatively serious "bad user experience" bug.
We need a free of buffer in there somewhere: nsCRT::free(buffer);
...and we should check that buffer gets allocated, right? Attaching new patch
Attached patch new patch (obsolete) — Splinter Review
*** Bug 84132 has been marked as a duplicate of this bug. ***
Changing the summary to specify the problem more clearly. This problem will occur with any XUL text. One dupe already filed for "Link properties' Link text", and there will probably be more.
Summary: [BiDi] Hebrew bookmarks are not 'flipped' → [BiDi] XUL text flips to and fro
Changing QA contact to giladehven@hotmail.com.
Keywords: intl
QA Contact: andreasb → giladehven
*** Bug 84134 has been marked as a duplicate of this bug. ***
*** Bug 87275 has been marked as a duplicate of this bug. ***
r=mkaply I'd like to try to get this in for 0.9.2 if possible
Component: Localization → BiDi Hebrew & Arabic
get a sr= and get into trunk now.
*** Bug 95209 has been marked as a duplicate of this bug. ***
Mass-move all BiDi Hebrew and Arabic qa to me, zach@zachlipton.com. Thank you Gilad for your service to this component, and best of luck to you in the future. Sholom.
QA Contact: giladehven → zach
*** Bug 97115 has been marked as a duplicate of this bug. ***
Attached patch new version of the patch (obsolete) — Splinter Review
Attachment 47486 [details] [diff] is a new version of the patch, essentially the same code but more modular to make it easier to add similar functionality elsewhere, as and when we need it (for example in the outliner). I hope I can get r and sr and get this in as soon as the tree opens.
Simon's patch on 8/29 also corrects a problem that was shown to me today by hebrew reader as such: 1. open bookmark manager 2. create a bookmark with a hebrew title to a website or something 3. create a bookmark of the type file:/// with a hebrew title (will turn into a folder) 4. observe the behaviour described in this bug. 5. expand/contract the bookmark that that corresponds to your folder, note that this causes the previously incorrectly rendering to be reversed, do it again and it goes back to being wrong. We fiddled around with this for a few minutes, seems to be that it doesn't matter which one is selected when you expand/contract... one or the other will reverse. In our case both bookmarks had the same title "MSN ישראל" (no idea how well buzilla is going to handle that... it's the title from http://www.msn.co.il/homepage.asp ) and were in a folder by themselves on the personal tool bar. The MSN bookmark was first, file:/// was second. This patch corrects both for us on SuSE Linux 7.2, with XFree86 4.1, GLIBC2.2 and KDE 2.2.
Would this possibly go into eMojo? Or is it anywhere near a code review atleast for us Mozilla users?
The patch has just bitrotted because of bug 100476, so I will have to prepare a new one and start the review request cycle again. Unfortunately I will be out of office from 2 - 9 October. zach/mkaply, can one of you help drive this if I don't check it in by tomorrow?
Can someone commit this before Simon's work bitrots again? Please.
Comment on attachment 51454 [details] [diff] [review] Brings the last patch into synch with the trunk Looks good to me
Attachment #51454 - Flags: review+
Attachment #51454 - Flags: superreview+
Comment on attachment 51454 [details] [diff] [review] Brings the last patch into synch with the trunk sr=attinasi - looks good to me. I suggest you have a box-guy tak a look too (evaughan or hyatt?)
*** Bug 108496 has been marked as a duplicate of this bug. ***
hyatt, can you take a look at attachment 51454 [details] [diff] [review]?
Looks good to me. ALl this code only kicks in when bidi is enabled, right? r/sr=hyatt
Yes, it's all contained within |#ifdef IBMBIDI|; however, IBMBIDI is default, and as is documented in bug 89203, trying to build without it is... uh... a bad idea. From a runtime perspective tough, which is probably more important, it is only called when the text frame's state has |NS_FRAME_IS_BIDI| set.
bitrotted again! Attachment 56995 [details] [diff] brings the patch into synch with rbs' changes from bug 102088, attachment 55710 [details] [diff] [review]
Keywords: mozilla0.9.6-
Attachment #51454 - Attachment is obsolete: true
Attachment #47486 - Attachment is obsolete: true
Attachment #36482 - Attachment is obsolete: true
Attachment #35598 - Attachment is obsolete: true
fix checked in
Marking FIXED
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
I have just installed mozilla 9.6, and the bug seems to be back. Also, when using auto-complete in the URL bar, Hebrew page titles are shown backwards.
The bug is resolved in the Mozilla nightlies. The fix was probably merged after 0.9.6 was branched.
Yes, this was checked in after 0.9.6 branched. Reversed Hebrew titles in the URL bar is an instance of bug 81032.
This is fixed in a self-built mach-o build from just the other day, verif. mozilla-bugzilla@future.shiny.co.il: if you are still seeing this with a current nightly, then please comment here. Thanks
Status: RESOLVED → VERIFIED
Component: Layout: BiDi Hebrew & Arabic → Layout: Text
QA Contact: zach → layout.fonts-and-text
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: