Fix for bug 81773: Bidi XUL text (e.g. bookmarks, tab titles) was flipping to and fro on systems without native Bidi support. r=mkaply, r/sr=hyatt, sr=attinasi